# RSD-Viewer

./: .dockerignore  .gitignore  README.md  index.html  jest.config.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.json
src/: AccountData.ts  App.tsx  Buttons.tsx  Dialogs.tsx  FileHandling.ts  Home.tsx  Toolbar.tsx  animate.css  main.tsx  styles.css
src-tauri/: Cargo.toml  build.rs  rsd-viewer-manifest.rc  rsd-viewer.exe.manifest  tauri.conf.json  updater.json  windows_manifest.xml
src-tauri/icons/: icon.icns
src-tauri/src/: Encryptor.rs  api_handler.rs  into_string_result.rs  io_handler.rs  main.rs
src/Common/: Buttons.tsx  CommonElements.tsx  Dialogs.tsx  Inputs.tsx  Scheme.tsx
src/Components/: Buttons.tsx  Dialogs.tsx  Forms.tsx
src/Home/: AccountColumn.tsx  CommonElements.tsx  Home.tsx  HomeDialog.tsx  HomeDialogs.tsx  OptionsColumn.tsx  SideButtons.tsx
src/Services/: AccountData.ts  ClearToolbar.ts  FileHandling.ts  Math.ts  MousePosition.ts  Sorting.ts  TwoFactorAuth.ts  WindowData.ts
src/Toolbar/: AddAccountDialog.tsx  AddPhoneNumberDialog.tsx  ImportFileDialog.tsx  PasswordGeneratorDialog.tsx  Toolbar.tsx  ToolbarDialog.tsx  ToolbarHeader.tsx  Verify2FADialog.tsx
src/Utils/: FileHandling.ts  StatePair.ts
src/__tests__/: AccountData.test.tsx  AcountIndexer.test.tsx  Math.test.ts
