[package]
name = "rsd_password_manager"
version = "0.3.2"
description = "An app made for securely managing passwords offline"
authors = ["Austin Bray"]
license = ""
repository = ""
edition = "2021"
build = "./build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "=1.3", features = [] }

[dependencies]
tauri = { version = "1.3", features = ["dialog-open", "process-exit", "shell-open"] }
rsd_encrypt = { path = "../../RSD-Encrypt/" } 
json = "0.12.4"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
