[package]
name = "rsd-viewer"
version = "1.0.1"
description = "RSD-Viewer: An app made for securely managing passwords offline"
authors = ["Austin Bray"]
license = ""
repository = ""
edition = "2021"
build = "./build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "=1.5.1", features = [] }
dotenv = "0.15.0"

[dependencies]
tauri = { version = "1.3", features = [ "updater", "dialog-open", "process-exit", "shell-open"] }
rsd-encrypt = { version = "0.1.0", git = "https://github.com/AustinBray77/RSD-Encryptor.git" } 
json = "0.12.4"
reqwest = "0.12.4"
dotenv = "0.15.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
